src/styles/pages/_admin.scss
.admin {
  &__getStarted {
    display: flex;
    &__arrow {
      padding-left: 20px;
      padding-right: 15px;
    }
    &__text {
      font-size: $font-size-xlarge;
      margin-top: auto;
      font-weight: 325;
    }
  }
  &__topbar {
    @include topbar(50px, $very-light-green);
    z-index: 5 !important; // this allows modals to sit above it.
    display: flex;
    justify-content: space-between;
    font-size: $font-size-normal;
    padding-left: 15px;
    padding-right: 15px;
    border-bottom: 2px solid $light-grey;

    &__nav {
      height: 80%;
      display: flex;
      justify-content: space-around;
      border: 1px solid $brand-color;
      border-radius: 2px;
    }

    &__navButton {
      @include button(white, shade($brand-color, 20%));
      font-weight: 500;
      padding: 6px 80px 6px 80px;
      border-radius: 2px;
      border-right: 1px solid tint($brand-color, 50%);
      border-left: 1px solid tint($brand-color, 50%);
      font-size: $font-size-medium;

      @media screen and (max-width: 1200px) {
        padding: 6px 20px 6px 20px;
      }

      &--active {
        @include button($brand-color, white);
        font-weight: bold;
        font-size: $font-size-large;
        padding: 6px 80px 6px 80px;
        border-radius: 2px;

        @media screen and (max-width: 1200px) {
          padding: 6px 20px 6px 20px;
        }
      }
    }
    &__rightBox {
      display: flex;
      align-items: center;
    }

    &__spacing {
      height: 50px;
    }
  }

  &__main-panel {
    padding: 20px 50px 10px 50px;
  }
  @include setMinPageHeight($topbar-height);
  &__onboardingModal {
    @include badgeFormat($mid-grey, white);
    margin-left: 25px;
  }
}

.manageUsers {
  &__rosterUpload {
    text-transform: none;
    margin-top: 30px;
  }
}

.RubricCommentExplorer {
  .md-dialog {
    width: 50%;
    min-width: 300px;
  }
}

